// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkouts-list-core displays an error state on failed data fetch 1`] = `
<checkouts-list-core>
  <div>
    <div class="table-wrapper">
      <table class="table table-hover" part="table text color font-family background-color">
        <thead class="sticky-top table-head">
          <tr class="table-light text-nowrap">
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The date each checkout occurred">
              Processed On
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The dollar amount of each checkout">
              Payment Amount
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The description of each checkout">
              Payment Description
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The payment mode of each checkout">
              Payment Mode
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The current status of each checkout">
              Status
            </th>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr>
            <td class="error-state" colspan="5" data-test-id="table-error-state" part="table-error text color font-family background-color" style="text-align: center;">
              An unexpected error occurred: Fetch error
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="5" part="table-cell text color font-family background-color">
              <pagination-menu>
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination">
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="button-disabled button text color font-family">
                        <span class="me-1">
                          «
                        </span>
                        <span>
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="button-disabled button text color font-family">
                        <span>
                          Next
                        </span>
                        <span class="ms-1">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</checkouts-list-core>
`;

exports[`checkouts-list-core renders properly with fetched data 1`] = `
<checkouts-list-core>
  <div>
    <div class="table-wrapper">
      <table class="table table-hover" part="table text color font-family background-color">
        <thead class="sticky-top table-head">
          <tr class="table-light text-nowrap">
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The date each checkout occurred">
              Processed On
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The dollar amount of each checkout">
              Payment Amount
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The description of each checkout">
              Payment Description
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The payment mode of each checkout">
              Payment Mode
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The current status of each checkout">
              Status
            </th>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr data-row-entity-id="cho_1a2b3c4d5e6f7g8h9i0j" data-test-id="table-row">
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Aug 8, 2024
              </div>
              <div class="fw-bold">
                3:47pm
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              $3.99 USD
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              One Chocolate Donut
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              Card Present
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-success" part="badge font-family badge-success" title="The checkout has been completed">
                Completed
              </span>
            </td>
          </tr>
          <tr data-row-entity-id="cho_2b3c4d5e6f7g8h9i0j1a" data-test-id="table-row">
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Aug 8, 2024
              </div>
              <div class="fw-bold">
                4:32pm
              </div>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              $10.99 USD
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              1 Dozen Chocolate Donuts
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              Card Present
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-danger" part="badge font-family badge-danger" title="The checkout has expired">
                Expired
              </span>
            </td>
          </tr>
          <tr data-row-entity-id="cho_3c4d5e6f7g8h9i0j1a2b" data-test-id="table-row">
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Aug 8, 2024
              </div>
              <div class="fw-bold">
                4:32pm
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              $19.99 USD
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              2 Dozen Chocolate Donuts - Website To Go Order
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              E-commerce
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-primary" part="badge font-family badge-primary" title="The checkout has been created">
                Created
              </span>
            </td>
          </tr>
          <tr data-row-entity-id="cho_4d5e6f7g8h9i0j1a2b3c" data-test-id="table-row">
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Aug 8, 2024
              </div>
              <div class="fw-bold">
                4:32pm
              </div>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              $89.99 USD
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              Weekly Donut Box Subscription
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              Buy Now Pay Later
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-primary" part="badge font-family badge-primary" title="The checkout has been created">
                Created
              </span>
            </td>
          </tr>
          <tr data-row-entity-id="cho_5e6f7g8h9i0j1a2b3c4d" data-test-id="table-row">
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Aug 8, 2024
              </div>
              <div class="fw-bold">
                4:32pm
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              $24.99 USD
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              Donut Shop Size M T Shirt - Website Order
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              E-commerce
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-secondary" part="badge font-family badge-secondary" title="The checkout has been attempted">
                Attempted
              </span>
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="5" part="table-cell text color font-family background-color">
              <pagination-menu>
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination">
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="button-disabled button text color font-family">
                        <span class="me-1">
                          «
                        </span>
                        <span>
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="button-disabled button text color font-family">
                        <span>
                          Next
                        </span>
                        <span class="ms-1">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</checkouts-list-core>
`;
